--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         body {
             background-color: rgb(247, 251, 255);
+            margin: 0;
         }
 
         img {
@@ -22,7 +23,15 @@
             object-fit: cover;
         }
 
-        section {
+        #splash {
+            background-image: url(splash1.png);
+            background-size: cover;
+            width: 100%;
+            height: 800px;
+            background-position: 50% 50%;
+        }
+
+        .data-container {
             max-width: 1000px;
             margin: 0 auto;
             padding: 10px;
@@ -33,6 +42,16 @@
 
         article {
             background: rgba(255, 178, 87, 0.17);
+        }
+
+        h1 {
+            font-family: 'Josefin Sans', sans-serif;
+            font-size: 9rem;
+            color: #450b04;
+            text-align: center;
+            position: absolute;
+            top: 20%;
+            left: 25%;
         }
 
         h3 {
@@ -61,7 +80,7 @@
 
 <body>
 
-    <header></header>
+    <section id="splash"></section>
 
     <section class="data-container"></section>
     <template>
