--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background-image: url(splash1.png);
             background-size: cover;
             width: 100%;
-            height: 800px;
+            height: 400px;
             background-position: 50% 50%;
         }
 
@@ -74,20 +74,54 @@
             font-weight: 900;
             text-align: end;
             color: #083b52;
+            margin-top: 25px;
         }
 
         nav {
             display: flex;
             justify-content: center;
+            flex-wrap: wrap;
         }
 
         button {
             margin: 10px;
+            width: 100px;
+            height: 30px;
+            border: 1px solid rgba(224, 85, 33, 0.35);
+            background-color: #fde7dc;
+            color: #450b04;
+            cursor: pointer;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        button:hover {
+            box-shadow: 4px 3px 2.5px rgba(255, 159, 76, 0.27);
         }
 
         .valgt {
-            background-color: grey;
-            color: white;
+            background-color: #c6e1f2;
+            color: #b56910;
+
+        }
+
+        footer {
+            background-color: #887B8D;
+            width: 100%;
+            bottom: 0;
+            color: #c6e1f2;
+            display: flex;
+            justify-content: space-around;
+        }
+
+        li {
+            list-style-type: none;
+            line-height: 1.4rem
+        }
+
+        @media only screen and (min-width: 700px) {
+            #splash {
+                height: 800px;
+            }
         }
     </style>
 </head>
@@ -100,9 +134,10 @@
         <button class="filter valgt" data-kat="alle">Alle</button>
         <button class="filter" data-kat="forretter">Forretter</button>
         <button class="filter" data-kat="hovedretter">Hovedretter</button>
+        <button class="filter" data-kat="desserter">Desserter</button>
         <button class="filter" data-kat="sideorders">Sideorders</button>
         <button class="filter" data-kat="drikkevarer">Drikkevarer</button>
-        <button class="filter" data-kat="desserter">Desserter</button>
+
     </nav>
 
     <section class="data-container"></section>
@@ -116,7 +151,19 @@
         </article>
     </template>
 
-    <footer></footer>
+    <footer>
+        <ul>
+            <li><b>Addresse:</b></li>
+            <li>Grønnegade 97</li>
+            <li>1234 København K</li>
+        </ul>
+        <ul>
+            <li><b>Åbningstider:</b></li>
+            <li>Mandag - fredag 10:30-22:00</li>
+            <li>Lørdag 12:00-23:00</li>
+        </ul>
+
+    </footer>
 
 
     <script>
