--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
             width: 100%;
             bottom: 0;
             color: #c6e1f2;
+
+        }
+
+        footer div {
+            max-width: 1000px;
+            margin: 0 auto;
             display: flex;
             justify-content: space-around;
         }
@@ -123,6 +129,7 @@
                 height: 800px;
             }
         }
+
     </style>
 </head>
 
@@ -152,16 +159,19 @@
     </template>
 
     <footer>
-        <ul>
-            <li><b>Addresse:</b></li>
-            <li>Grønnegade 97</li>
-            <li>1234 København K</li>
-        </ul>
-        <ul>
-            <li><b>Åbningstider:</b></li>
-            <li>Mandag - fredag 10:30-22:00</li>
-            <li>Lørdag 12:00-23:00</li>
-        </ul>
+        <div>
+            <ul>
+                <li><b>Addresse:</b></li>
+                <li>Grønnegade 97</li>
+                <li>1234 København K</li>
+            </ul>
+            <ul>
+                <li><b>Åbningstider:</b></li>
+                <li>Mandag - fredag 10:30-22:00</li>
+                <li>Lørdag 12:00-23:00</li>
+            </ul>
+        </div>
+
 
     </footer>
 
@@ -227,5 +237,8 @@
             this.classList.add("valgt");
             // document.querySelector("h1").textContent = this.textContent;
         }
+
     </script>
-</body></html>
+</body>
+
+</html>
